--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.5.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.12.1",
-    "redux": "^4.0.5",
+    "react-router-dom": "^6.14.1",
+    "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "redux-devtools-extension": "^2.13.9",
     "vite": "^4.4.5"
   }
 }
